fixing fonts and spacing

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,9 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap');
+@import url(https://fonts.googleapis.com/css?family=Rubik);
 
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: 'Rubik', sans-serif;
 }
 
 :root {
@@ -16,6 +18,7 @@
   --rankRed: #BD2A2A;
   --factColor: #373B93;
   --textGrey: #828282;
+  --annotationGrey: #4F4F4F;
   --backgroundGrey: #FAFAFA;
   --borderGrey: #DDDDE3;
   --buttonGrey: #BBBCC3;
@@ -23,7 +26,7 @@
 }
 
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Rubik', sans-serif;
   background-color: var(--grey);
 }
 
@@ -47,7 +50,7 @@ footer {
   text-decoration: none;
   font-size: 18px;
   line-height: 25px;
-  border-radius: 4px;
+  border-radius: 8px;
   margin-left: 10px auto;
 }
 
@@ -81,7 +84,7 @@ footer {
   height: auto;
   margin: 0 auto;
   position: relative;
-  border-radius: 4px;
+  border-radius: 8px;
   box-sizing: border-box;
 }
 
@@ -96,7 +99,25 @@ footer {
   }
 }
 
+h3 {
+  font-size: 16px;
+}
 
+
+p.light {
+  font-size: 12px;
+  color: var(--annotationGrey);
+}
+
+p {
+  font-size: 15px;
+}
+
+img {
+  max-height: 100%;
+  max-width: 100%;
+  object-fit: contain;
+}
 
 /* CONTAINER STUFF */
 .container {
@@ -130,7 +151,7 @@ footer {
   float: right;
   height: auto;
   margin: 0 auto;
-  border-radius: 4px;
+  border-radius: 8px;
   padding: 10px;
 }
 
@@ -140,7 +161,7 @@ footer {
   margin: 0 auto;
   padding: 10px;
   position: relative;
-  border-radius: 4px;
+  border-radius: 8px;
   text-align: center;
 }
 
@@ -149,7 +170,7 @@ footer {
   float: left;
   height: auto;
   margin: 0 auto;
-  border-radius: 4px;
+  border-radius: 8px;
   padding: 10px;
 }
 
@@ -170,7 +191,7 @@ footer {
   display: inline-block;
   background: white;
   border: none;
-  border-radius: 10px;
+  border-radius: 8px;
   cursor: pointer;
   margin-right: 20px;
   padding: 10px;
@@ -247,7 +268,7 @@ form.searchBar input[type=text] {
   padding: 10px;
   font-size: 17px;
   border: 1px solid var(--borderGrey);
-  border-radius: 10px;
+  border-radius: 8px;
   float: left;
   width: 100%;
   background: var(--backgroundGrey);
@@ -304,6 +325,21 @@ form.example::after {
 }
 
 
+select {
+  border-radius: 8px;
+  border: 1px solid var(--borderGrey);
+  text-indent: 0.5em;
+  font-size: 1em;
+}
+
+input {
+  border-radius: 8px;
+  border: 1px solid var(--borderGrey);
+  text-indent: 2px;
+  font-size: 1em;
+}
+
+
 /* MODAL STUFF */
 
 .modal {
@@ -330,7 +366,7 @@ form.example::after {
   padding: 20px;
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
   text-align: left;
-  border-radius: 4px;
+  border-radius: 8px;
   width: calc(100% - 120px); /* This just a default width */
   max-width: 580px;
 }
